--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "lucide-svelte": "^0.441.0",
     "postcss": "^8.4.47",
     "socket.io-client": "^4.7.5",
+    "svelte-highlight": "^7.7.0",
     "tailwindcss": "^3.4.12"
   },
   "devDependencies": {
