--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "firebase": "^10.13.2",
     "lucide-svelte": "^0.441.0",
     "postcss": "^8.4.47",
     "socket.io-client": "^4.7.5",
